k8s/jira.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: $SERVICE_NAME
spec:
  ports:
  - { port: 80, targetPort: 8080 }
  selector:
    app.kubernetes.io/name: $SERVICE_NAME
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: $SERVICE_NAME
  name: $SERVICE_NAME
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: $SERVICE_NAME
    spec:
      containers:
      - name: $SERVICE_NAME
        image: cptactionhank/atlassian-jira:$VERSION_JIRA
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 6144Mi
          requests:
            cpu: 300m
            memory: 2048Mi
        volumeMounts:
        - mountPath: /var/atlassian/jira
          name: $SERVICE_NAME
          subPath: home
        - mountPath: /opt/atlassian/jira/logs
          name: $SERVICE_NAME
          subPath: logs
      dnsConfig:
        nameservers: [ $DNS_SERVERS ]
        options:
        - name: use-vc
        - name: ndots
      nodeSelector:
        service.$SERVICE_NAME: allow
      volumes:
      - name: $SERVICE_NAME
        hostPath: { path: $K8S_VOLUMES_PATH/$SERVICE_NAME }
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $SERVICE_NAME-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - secretName: $SERVICE_NAME.$DOMAIN
    hosts:
    - $SERVICE_NAME.$DOMAIN
  rules:
  - host: $SERVICE_NAME.$DOMAIN
    http:
      paths:
      - path: /
        backend:
          serviceName: $SERVICE_NAME
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $SERVICE_NAME-totp
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: http://$AUTHELIA_IP/api/verify
    nginx.ingress.kubernetes.io/auth-signin: https://authtotp.$DOMAIN
spec:
  tls:
  - secretName: $SERVICE_NAME.$DOMAIN
    hosts:
    - $SERVICE_NAME.$DOMAIN
  rules:
  - host: $SERVICE_NAME.$DOMAIN
    http:
      paths:
      - path: /login.jsp
        backend:
          serviceName: $SERVICE_NAME
          servicePort: 80
